--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
       "email": "951004925@qq.com"
     }
   ],
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "require-dev": {
     "phpunit/phpunit": "^9.6"
